--- a/default.config.yml
+++ b/default.config.yml
@@ -89,6 +89,7 @@ homebrew_cask_apps:
   - wireshark
   - amazon-photos
   - haptickey
+  - tripmode
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
