add ammonite to brew formulas

--- a/default.config.yml
+++ b/default.config.yml
@@ -37,6 +37,7 @@ homebrew_installed_packages:
   - nmap          # port scanning, security auditing https://nmap.org
   - node
   - scala
+  - ammonite-repl
   - nvm
   - ssh-copy-id   # copy public key to remote machine's authorized_keys
   - readline      # Better terminal editing
