--- a/default.config.yml
+++ b/default.config.yml
@@ -16,40 +16,24 @@ dotfiles_files:
 
 homebrew_installed_packages:
   # - ansible # Installed via Pip.
-  - mas           # Mac App Store - CLI
-  - htop-osx
-  - zsh
-  - zsh-completions
-  - zsh-syntax-highlighting
-  - git
-  - bazel
-  - maven
-  - diff-so-fancy
-  - autojump
-  - fzf
-  - jq
-  - go
-  - gpg
-  - hub
-  - httpie
-  - sqlite
-  - mcrypt        # crypto library
-  - nmap          # port scanning, security auditing https://nmap.org
-  - node
-  - scala
   - ammonite-repl # Scala REPL
-  - stack         # Haskell Stack
-  - nvm
-  - ssh-copy-id   # copy public key to remote machine's authorized_keys
-  - readline      # Better terminal editing
-  - openssl
-  - tree
-  - wget
-  - wrk           # http benchmarking https://github.com/wg/wrk
-  - tldr
-  - openconnect   # Open client for Cisco AnyConnect VPN
-  - kafka
+  - autojump
+  - dive          # Docker image explorer
   - fish          # Fish shell
+  - fzf
+  - git
+  - go
+  - httpie        # Like cURL with colored output
+  - jq
+  - kafka         # Kafka
+  - mas           # Mac App Store - CLI
+  - openssl
+  - poetry        # Python environment management
+  - scala
+  - ssh-copy-id   # copy public key to remote machine's authorized_keys
+  - tldr          # Explain commands and common
+  - tree          # View directory tree
+  - wget          
 
 homebrew_taps:
   - homebrew/core
@@ -58,46 +42,48 @@ homebrew_taps:
 
 homebrew_cask_appdir: /Applications
 homebrew_cask_apps:
-  - paw
-  - burp-suite
-  - iterm2
-  - bitwarden
   - alfred
-  - notion
+  - amazon-photos
+  - balenaetcher
+  - beyond-compare
+  - bitwarden
+  - brave-browser
+  - burp-suite
+  - dash
   - docker
   - firefox
-  - brave-browser
-  - google-chrome
+  - flour
+  - flux
+  - google-cloud-sdk
+  - intellij-idea
+  - iterm2
+  - java
+  - karabiner-elements
+  - kindle
+  - macdown
+  - ngrok
+  - nomachine
+  - notion
+  - obsidian
+  - odrive
+  - parallels
+  - paw
   - sequel-pro
   - slack
-  - telegram
-  - sublime-text
-  - visual-studio-code
-  - vagrant
-  - parallels
-  - balenaetcher
-  - dash
-  - flour
-  - beyond-compare
-  - intellij-idea
-  - java8
-  - keybase
-  - mailbutler
-  - spotify
-  - stremio
-  - steam
-  - the-unarchiver
-  - vlc
   - spectacle
-  - ngrok
-  - macdown
-  - google-cloud-sdk
+  - spotify
+  - steam
+  - stremio
+  - sublime-text
+  - telegram
+  - the-unarchiver
+  - vagrant
+  - virtualbox
+  - virtualbox-extension-pack
+  - vlc
+  - vscodium
   - wireshark
-  - amazon-photos
-  - haptickey
-  - cleanmymac
-  - flux
-  - sloth
+  - zoomus
 
 # See `geerlingguy.mas` role documentation for usage instructions.
 mas_installed_apps:
